# kapollo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
delos/: Cargo.toml  README.md
delos/docs/: recommendation.md  s1-vt100.md  s2-alacritty.md  s3-wezterm.md  scorecard.md  stable-row-index.md
delos/spike-alacritty/: Cargo.toml
delos/spike-alacritty/src/: main.rs  selection.rs
delos/spike-support/: Cargo.toml
delos/spike-support/src/: clipboard.rs  coords.rs  hyperlink.rs  lib.rs  modes.rs  pty.rs
delos/spike-vt100/: Cargo.toml
delos/spike-vt100/src/: main.rs  selection.rs
delos/spike-wezterm/: Cargo.toml
delos/spike-wezterm/src/: main.rs  selection.rs
docs/: architecture.md  keymap-defaults.toml  setup.md  specification.md  usage.md
licenses/: wezterm-LICENSE.md
specs/001-mvp-repl/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mvp-repl/checklists/: requirements.md
specs/001-mvp-repl/contracts/: cli.md  config.md  shell-hooks.md  slash-commands.md
specs/002-mvp-hardening/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mvp-hardening/checklists/: requirements.md
specs/002-mvp-hardening/contracts/: config.md  keybindings.md  shell-hooks.md  slash-commands.md
specs/003-grid-spike/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-grid-spike/checklists/: requirements.md
specs/003-grid-spike/contracts/: scorecard.md  spike-binary-cli.md
specs/004-grid-rework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-grid-rework/checklists/: requirements.md
specs/004-grid-rework/contracts/: block-store.md  grid-render.md  mouse-selection.md
specs/005-input-and-status/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-input-and-status/checklists/: requirements.md
specs/006-keymap-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-laat-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/planning/: brainstorm.md  pre-plan-005-input-and-status.md  pre-plan-006-keymap-engine.md  pre-plan-007-fancy-status-bar.md  pre-plan-007-laat-mode.md  pre-plan-008-fancy-status-bar.md  pre-plan-008-laat-mode.md
src/: app.rs  clipboard.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs
src/action/: mod.rs
src/grid/: mod.rs  render.rs
src/input/: editing.rs  mod.rs  router.rs  selection.rs
src/output/: mod.rs  parser.rs  sentinel.rs
src/pty/: mod.rs  shell.rs
src/selection/: coords.rs  mod.rs
src/session/: block.rs  mod.rs  ringbuf.rs  store.rs
src/slash/: builtins.rs  mod.rs
src/ui/: divider.rs  input_pad.rs  mod.rs  passthrough.rs  status.rs  transcript.rs
tests/: block_boundaries.rs  block_store.rs  block_store_seam.rs  caps.rs  chrome.rs  config.rs  cwd_osc7.rs  grid_render.rs  grid_render_scroll.rs  input_editing.rs  input_modes.rs  input_pad.rs  input_paste.rs  input_router.rs  input_selection.rs  input_submit_trim.rs  keymap_config.rs  keymap_defaults_doc.rs  keymap_engine.rs  keymap_parse.rs  laat_engine.rs  passthrough.rs  pty_smoke.rs  push_pop.rs  render_normalize.rs  scrollback_context.rs  scrolling.rs  selection_coords.rs  selection_routing.rs  shell_parity.rs  signals.rs  slash_filter_save.rs  slash_status_keys.rs  status_bar.rs
(+20 files in other folders)
