[package]
name = "kapollo"
version = "0.1.0"
edition = "2021"
description = "Apollo-DM-style split-pad terminal REPL that wraps your shell"
license = "MIT"
authors = ["Ken Hiatt"]
repository = "https://github.com/kenhia/kapollo"
readme = "README.md"
keywords = ["terminal", "tui", "shell", "repl", "pty"]
categories = ["command-line-utilities", "command-line-interface"]

# The 003-grid-spike lives in its own isolated Cargo workspace under delos/.
# Excluding it here keeps spike deps (vt100/alacritty_terminal/wezterm-term)
# out of kapollo's dependency graph and lockfile (FR-003/FR-004).
[workspace]
exclude = ["delos"]

[lib]
name = "kapollo"
path = "src/lib.rs"

[[bin]]
name = "kapollo"
path = "src/main.rs"

[[bin]]
name = "kap"
path = "src/bin/kap.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.9"
vte = "0.13"
# wezterm-term is the production terminal-emulation engine selected by the 003
# spike (R1/D27). It is not published to crates.io; reproducibility rests on
# this pinned rev plus the committed Cargo.lock. alacritty_terminal is the
# named fallback (not added unless this proves untenable).
wezterm-term = { git = "https://github.com/wezterm/wezterm.git", rev = "577474d89ee61aef4a48145cdec82a638d874751" }
base64 = "0.22"
arboard = "3.6"
serde = { version = "1.0", features = ["derive"] }
# `preserve_order` keeps `[keymap]` entries in document order so a same-key
# conflict resolves to the last-declared binding (FR-010). indexmap is already
# in the dependency tree, so this enables an existing dep's feature only.
toml = { version = "0.8", features = ["preserve_order"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
anyhow = "1.0"
thiserror = "2.0"
directories = "5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
