# delos — isolated spike workspace for 003-grid-spike.
# This is its OWN Cargo workspace (separate Cargo.lock); the root kapollo
# crate excludes it so spike dependencies never enter the shipping graph.
[workspace]
resolver = "2"
members = ["spike-support", "spike-vt100", "spike-alacritty", "spike-wezterm"]

[workspace.dependencies]
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.9"
arboard = "3.6"
